syntax = "proto3";

package types;
option go_package = "github.com/bluesky-social/indigo/pkg/prototypes";

import "google/protobuf/timestamp.proto";

//
// Types stored in FoundationDB
//

message FirehoseLeader {
	// A UUID for the leader
	string id = 1;
  google.protobuf.Timestamp acquired_at = 2;
  google.protobuf.Timestamp expires_at = 3;
  google.protobuf.Timestamp renewed_at = 4;
}

// FirehoseEvent wraps a raw ATProto firehose event for storage in FoundationDB.
// Events are stored with versionstamped keys for global ordering.
message FirehoseEvent {
  // Sequence number from the upstream firehose (for cursor tracking)
  int64 upstream_seq = 1;

  // The raw CBOR-encoded event bytes from the websocket (header + body)
  bytes raw_event = 2;

  // Timestamp when this event was received by cask
  google.protobuf.Timestamp received_at = 3;

  // Event type extracted from the header (e.g., "#commit", "#identity", "#account")
  string event_type = 4;
}
